src/pages/en/v1.11.0/sdk/constructor.mdx
---
title: "JavaScript SDK - Initializing the SDK"
metaTitle: "JavaScript SDK - Initializing the SDK"
metaDescription: "Configuration options for the tracker's constructor method"
---
import Aside from '~/components/Aside.astro'
import ORCard from '~/components/Card/ORCard.astro'

## Installation

The following line will install the tracker and with it the SDK for you to take advantage of all tracker features.

```bash
npm i @openreplay/tracker
```

## Initialization
When instantiating OpenReplay's tracker, there are several configuration options you can provide to customize many aspects of the recording and the recording experience.

You must set the `projectKey` option in the constructor. You can get this value from your OpenReplay dashboard under 'Preferences > Projects'.

<Aside type="tip">
  Note that if you have multiple projects, you need to be careful which project key you choose.
</Aside>


### Single Page Applications (SPA)
If your website is a **Single Page Application (SPA)** use the below code:

```js
import OpenReplay from '@openreplay/tracker';
//...
const tracker = new OpenReplay({
  projectKey: PROJECT_KEY
});
tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
```

### Server-side Rendered (SSR)
Otherwise, if your web app is **Server-Side-Rendered (SSR)** (i.e. NextJS, NuxtJS) use the below snippet. Ensure `tracker.start()` is called once the app is started (in `useEffect` or `componentDidMount`).

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
});
//...
function MyApp() {
  useEffect(() => { // use componentDidMount in case of React Class Component
    tracker.start(); // returns a promise with session info (sessionID, sessionHash, userUUID)
  }, [])
}
```

<Aside type="tip">
If you're using a particular web framework, check out our [Tracker Setup section](/using-or) to know how to get started.
</Aside>

## Example

```js
import OpenReplay from '@openreplay/tracker/cjs';
//...
const tracker = new OpenReplay({
      projectKey: PROJECT_KEY,
      ingestPoint: "https://openreplay.mydomain.com/ingest", // when dealing with the self-hosted version of OpenReplay
      capturePerformance: true,
      __DISABLE_SECURE_MODE: true // for local testing
});
```

## Initialization Options

There are a set of options you can pass to the constructor. Only `projectKey` is required.

### General Purpose

- `projectKey: string` The ID of the project you're tracking.
- `sessionHash?: string` The hash of the initial session. This is useful when sessions traverse different subdomains on your web app but you want to stitch them into a single recording. In case it's not possible to continue the session (doesn't exist or is finished), the tracker will automatically start a new one. It's also returned on `stop()`. More details on this [here](/troubleshooting/session-recordings#replaysarebrokenacrosssubdomains).
- `ingestPoint?: string` Your OpenReplay domain (i.e. https://openreplay.mydomain.com/ingest), to which the tracker will be sending events. This is optional for OpenReplay Cloud users. Default: `https://api.openreplay.com/ingest` (which points to OpenReplay Cloud). 
- `revID?: string` The revision ID of your web app. Useful when searching for issues happening on a specific release version.
- `resourceBaseHref?: string` Refers to the publicly accessible domain where assets (styles, fonts and icons) could be fetched by OpenReplay. Since they're required for proper session replay, this option is useful to get around the limitation of having your site (and therefore assets) hosted in a private domain. Example: `https://mypublicsite.com/assets/`.
- `captureIFrames?: boolean` For capturing all of the same-domain iFrames in your web app. If you wish to track a specific iFrame, then instead simply add the `data-openreplay-capture` HTML attribute to the `<iframe>` tag. Default: `true`.
- `disableClickmaps?: boolean` For disabling click maps. Default: `true`.
- `verbose?: boolean` For enabling logs. Default: `false`.
- `autoResetOnWindowOpen?: boolean` Enable this option to reset the sessionID when opening a new tab from your application. This overwrites the `window.open` method to avoid duplicate sessionIDs due to shared session storage between browser tabs. Default: `false`.

### Privacy

- `respectDoNotTrack?: boolean` Do not start tracker if the do-not-track flag is enabled in the user's browser. Default: `false`.
- `obscureTextEmails?: boolean` Obscures emails in text elements. Emails will be converted to a random chain of asterisks. Default: `true`.
- `obscureTextNumbers?: boolean` Obscures numbers in text elements. Numbers will be converted to a random chain of asterisks. Default: `false`.
- `obscureInputEmails?: boolean` Obscures emails in input fields. Email values will be converted to a random chain of asterisks. Default: `true`.
- `defaultInputMode?: 0 | 1 | 2` Default capture mode for input values. Respectively: plain, obscured or ignored. Default: `1` (obscured).

Note that excluded data is obscured or suppressed before sending the data to OpenReplay servers. Changes applied to the above options cannot be retroactive and will only apply to newly collected data. See [Sanitize Data](/installation/sanitize-data) for more details.

### Console

- `consoleMethods?: Array<'log' | 'info' | 'warn' | 'error'  'debug' | 'assert'> | null` Specifies the list of console methods to capture. Default: `['log', 'info', 'warn', 'error', 'debug', 'assert']`
- `consoleThrottling?: number` Max number of captured console entries per second. Default: `30`.

### Exceptions

- `captureExceptions?: boolean` Captures JavaScript exceptions and stacktraces. Default: `true`.

### Timings

- `captureResourceTimings?: boolean` Logs resource timings. Default: `true`.
- `capturePageLoadTimings?: boolean` Logs page load timings. Default: `true`.
- `capturePageRenderTimings?: boolean` Computes page rendering metrics such as Speed Index, Visually Complete or Time To Interactive. Requires `captureResourceTimings = true`. Default: `true`.

### Performance

- `capturePerformance?: boolean` For capturing performance metrics such as framerate, CPU and memory consumption. Default: `true`.


### Network

The `network` option relates to capturing network requests and payloads for `fetch` and `XHR`.

```js
network?: {
    failuresOnly: boolean;
    sessionTokenHeader: string;
    ignoreHeaders: Array<string> | boolean;
    capturePayload: boolean; // make sure you sanitize your data before enabling it
    sanitizer: (RequestResponseData) => RequestResponseData | null;
  }
```

See [Network Options](/installation/network-options) for examples and more details on how to redact sensitive data. 

### Mouse pointer

The `mouse` option relates to capturing selectors for clicks to build clickmaps

```js
mouse?: 
  {
  disableClickmaps?: boolean
  minSelectorDepth?: number
  nthThreshold?: number
  maxOptimiseTries?: number
  }
```

- `disableClickmaps?: boolean` Disables selector calculation entirely. Default: `false`.
- `minSelectorDepth?: number` Minimum length of an optimized selector (default 2). Example: `body > div > div > p => body > p`
- `nthThreshold?: number` Number of selector tries before falling back to nth-child selectors. This is an **expensive operation** and may incur a significant overhead, do not set higher than 2000. Default: `1000`.
- `maxOptimiseTries?: number` Number of tries to optimize and shorten the selector. Default: `10 000`.

### Reconnections

- `connAttemptCount?: number` Max number of retries when tracker's HTTP requests fail to reach the backend. Default: `10`.
- `connAttemptGap?: number` Duration between each retry attempt (expressed in ms). Default: `8000`.

### Security

- `__DISABLE_SECURE_MODE?: boolean` For allowing insecure connection between tracker and backend on sites without SSL. This should be used for **development purposes only**. Default: `false`.

<Aside type="caution">
    Note that when using `__DISABLE_SECURE_MODE` from your local workstation, you **might** see visual differences when watching the replay, like CSS styles not properly loading.
    For an optimal recording, your tests should be done from a publicly available URL.
</Aside>

## Methods
<div class="grid grid-cols-12 md:grid-cols-12 gap-3 md:gap-4">
  <ORCard title="Get to know the methods" url="/sdk/methods" hideIcon={true} width="100"/>
</div>
